# PennyAgents

./: .env.example  .env.railway  .replit  MVP_IMPLEMENTATION_GUIDE.md  README.md  SETUP_STATUS.md  YOLO_IMPLEMENTATION_SUMMARY.md  YOLO_INTEGRATION.md  cookies.txt  docker-compose.yml  jest.config.js  nixpacks.toml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  railway.json  replit.md  security-audit-matrix.md  setup-yolo.sh  state.json  tailwind.config.ts
ai-service/: .env.example  Dockerfile  behavior_analysis.py  demo_yolo.py  facial_recognition.py  facial_recognition_simple.py  gait_detection.py  main.py  main_old.py  requirements.txt  run.sh  start.py  stream_processor.py  test-health.py  test_yolo_integration.py  websocket_bridge.py  yolo_service.py
attached_assets/: Pasted--AgentProtectedRoute-effect-Object-agentId-security-agent-authLoading-false-agentsLoading-1758809716430_1758809716431.txt  Pasted--FAKE-FUNCTIONALITY-Static-Mock-Data-Sales-Operations-HR-Agents-Hardcoded-data-All-metrics-c-1758670495891_1758670495893.txt  Pasted--Phase-1-Core-AI-Infrastructure-Week-1-2-Critical-AI-Services-Needed-1-Computer-Vision-Engine-1758814170965_1758814170966.txt  Pasted--WHAT-IS-BROKEN-Critical-Issues-TypeScript-Compilation-Errors-System-Breaking-72-LSP-Diagno-1758764330431_1758764330432.txt  Pasted-Building-the-Penny-Theft-Detection-MVP-Technology-Stack-Architecture-Use-a-cloud-based-serverles-1757697339727_1757697339727.txt  (+4 more)
client/: Dockerfile  nginx.conf
docs/: YOLOv11_GUIDE.md
migrations/: 0000_operations_agent.sql  0001_hr_agent.sql  (+1 more)
(+174 files in other folders)
